# bayesian_biomark_pooling

./: .gitignore  application.py  env_develop.yaml  env_hist.yaml  example_data.csv  main.py  main.sh  plot.py  pyproject.toml  readme.md  results.py  run.sh  test_binary_posterior.py  test_logit_normal.py
experiments/: application.py  io.py  main.py  run2.sh  simulation.py
experiments/BBP/: application.py  run.sh  run2.sh  run_simulation.py  simulate_data.py  simulation copy.py  simulation.py  summary_simulation.py
experiments/EMBP/: main.py  main.sh
experiments/bbp/: run.sh
experiments/embp/: main.py  main.sh  readme.md
src/: evaluate.py  method.py  simulate.py
src/bayesian_biomarker_pooling/: __init__.py  base.py  bbp.py  embp.py  embp_gpu.py  logger.py  simulate.py  utils.py
src/bayesian_biomarker_pooling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bayesian_biomarker_pooling/embp/: __init__.py  base.py  binary.py  binary_gpu.py  binary_is.py  binary_is_gpu.py  binary_is_numba.py  binary_lap.py  continuous.py  embp.py  utils.py
src/method/: __init__.py  _base.py  _numpyro.py  _pymc.py
tests/: test_BBP.py  test_simulate.py
